--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #fff;
     color: #333;
     line-height: 1.6;
 }
@@ -85,7 +85,7 @@ body {
 
 .logo {
     font-size: 2em;
-    color: #333;
+    color: #777;
     text-decoration: none;
 }
 
