--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 
 /* Header */
 .site-header {
-    background-color: #f5f5f5;
+    background-color: #808000;
     padding: 20px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: sticky;
@@ -102,7 +102,7 @@ body {
 
 .main-nav a {
     text-decoration: none;
-    color: #555;
+    color: #800080;
     font-weight: bold;
     transition: color 0.3s ease-in-out;
 }
