--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 
 /* Header */
 .site-header {
-    background-color: #00BFFF;
+    background-color: #8B0000;
     padding: 20px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: sticky;
@@ -102,7 +102,8 @@ body {
 
 .main-nav a {
     text-decoration: none;
-    color: #00BFFF;
+    color: #8B00000
+    ;
     font-weight: bold;
     transition: color 0.3s ease-in-out;
 }
@@ -191,7 +192,7 @@ body {
 }
 
 .product-card {
-    background-color: #f8f8f8;
+    background-color: #FFE4E1;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
