--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .button.secondary {
-    background-color: #f4f4f4;
+    background-color: #f8f8f8;
     color: #007bff;
     border: 2px solid #007bff;
 }
@@ -85,7 +85,7 @@ body {
 
 .logo {
     font-size: 2em;
-    color: #777;
+    color: #89aca1;
     text-decoration: none;
 }
 
