--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ body {
 
 /* Call to Action */
 .call-to-action {
-    background-color: #003333;
+    background-color: #FFC0CB;
     color: #fff;
     padding: 80px 0;
     text-align: center;
