--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #fff;
-    color: #000000;
+    background-color: #FFB6C1;
+    color: #FFB6C1;
     line-height: 1.6;
 }
 
@@ -85,7 +85,7 @@ body {
 
 .logo {
     font-size: 2em;
-    color: #89aca1;
+    color: #;
     text-decoration: none;
 }
 
