--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ body {
 }
 
 .button.primary {
-    background-color: #007bff;
+    background-color: #;000000
     color: #fff;
-    border: 2px solid #007bff;
+    border: 2px solid #000000;
 }
 
 .button.primary:hover {
