--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ body {
 }
 
 .button.secondary {
-    background-color: #f8f8f8;
-    color: #007bff;
-    border: 2px solid #007bff;
+    background-color: #000000;
+    color: #000000;
+    border: 2px solid #000000;
 }
 
 .button.secondary:hover {
