--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #FFB6C1;
-    color: #FFB6C1;
+    background-color: #993399;
+    color: #993399;
     line-height: 1.6;
 }
 
@@ -41,8 +41,8 @@ body {
 }
 
 .button.secondary:hover {
-    background-color: #007bff;
-    color: #007bff;
+    background-color: #DDA0DD;
+    color: #DDA0DD;
     transform: translateY(-2px);
     box-shadow: 0 3px 10px rgba(0, 123, 255, 0.2);
 }
@@ -64,12 +64,12 @@ body {
     transform: translateX(-50%);
     width: 80px;
     height: 3px;
-    background-color: #007bff;
+    background-color: #DDA0DD;
 }
 
 /* Header */
 .site-header {
-    background-color: #000000;
+    background-color: #fff;
     padding: 20px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: sticky;
@@ -85,7 +85,7 @@ body {
 
 .logo {
     font-size: 2em;
-    color: #007bff;
+    color: #fff;
     text-decoration: none;
 }
 
@@ -102,14 +102,14 @@ body {
 
 .main-nav a {
     text-decoration: none;
-    color: #000000
+    color: #fff
     ;
     font-weight: bold;
     transition: color 0.3s ease-in-out;
 }
 
 .main-nav a:hover {
-    color: #007bff;
+    color: #fff;
 }
 
 .search-bar {
