--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 
 .section-title {
     font-size: 2.5em;
-    color: #f8f8f8;
+    color: #BA55D3;
     text-align: center;
     margin-bottom: 30px;
     position: relative;
@@ -85,7 +85,7 @@ body {
 
 .logo {
     font-size: 2em;
-    color: #DDA0DD;
+    color: #BA55D3;
     text-decoration: none;
 }
 
@@ -126,7 +126,7 @@ body {
 
 .search-bar button[type="submit"] {
     background-color: #fff;
-    color: #fff;
+    color: #BA55D3;
     border: none;
     padding: 10px 15px;
     border-radius: 0 5px 5px 0;
