--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ body {
 /* Call to Action */
 .call-to-action {
     background-color: #FFC0CB;
-    color: #fff;
+    color: #FFB6C1;
     padding: 80px 0;
     text-align: center;
     background-image: linear-gradient(45deg, rgba(0, 123, 255, 0.8), rgba(0, 86, 179, 0.8));
@@ -264,7 +264,7 @@ body {
 /* Footer */
 .site-footer {
     background-color: #333;
-    color: #fff;
+    color: #FFB6C1;
     text-align: center;
     padding: 20px 0;
     font-size: 0.9em;
