--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .button.secondary {
     background-color: #000000;
-    color: #C71585;
+    color: #8B008B;
     border: 2px solid #000000;
 }
 
