--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ body {
 /* Call to Action */
 .call-to-action {
     background-color: #FFC0CB;
-    color: #FFB6C1;
+    color: #C71585;
     padding: 80px 0;
     text-align: center;
     background-image: linear-gradient(45deg, rgba(0, 123, 255, 0.8), rgba(0, 86, 179, 0.8));
