--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ body {
 /* Hero Section */
 .hero {
     background: linear-gradient(rgba(8, 9, 0, 5.0), rgba(8, 9, 0, 5.0)), url('materiais de construção.site') center/cover no-repeat;
-    color: #fff;
+    color: #FF69B4;
     padding: 100px 0;
     text-align: center;
 }
