--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #C71585;
+    background-color:#EE82EE;
     color: #483D8B;
     line-height: 1.6;
 }
