--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .button.primary {
     background-color: #fff;
-    color: #483D8B;
+    color: #FF69B4;
     border: 2px solid #000000;
 }
 
@@ -49,7 +49,7 @@ body {
 
 .section-title {
     font-size: 2.5em;
-    color: #BA55D3;
+    color: #FF1493 ;
     text-align: center;
     margin-bottom: 30px;
     position: relative;
