--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ body {
 /* Footer */
 .site-footer {
     background-color: #333;
-    color: #EE82EE;
+    color: #DA70D6;
     text-align: center;
     padding: 20px 0;
     font-size: 0.9em;
