--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
 
 .search-bar button[type="submit"] {
     background-color: #fff;
-    color: #FF69B4;
+    color: #FF00FF;
     border: none;
     padding: 10px 15px;
     border-radius: 0 5px 5px 0;
@@ -156,7 +156,7 @@ body {
 /* Hero Section */
 .hero {
     background: linear-gradient(rgba(8, 9, 0, 5.0), rgba(8, 9, 0, 5.0)), url('materiais de construção.site') center/cover no-repeat;
-    color: #FFE4E1;
+    color: #EE82EE;
     padding: 100px 0;
     text-align: center;
 }
