--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background: linear-gradient(rgba(8, 9, 0, 5.0), rgba(8, 9, 0, 5.0)), url('materiais de construção.site') center/cover no-repeat;
+    background: linear-gradient(rgba(8, 9, 0, 5.0), rgba(8, 9, 0, 5.0)), url('fotodefundo.jpg') center/cover no-repeat;
     color: #EE82EE;
     padding: 100px 0;
     text-align: center;
